--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
 	"name" : "facebook-euchre",
 	"version" : "0.0.1",
-	"dependencies" : { "everyauth" : "https://github.com/bigokro/everyauth/raw/master/everyauth.tar.gz", "nano" : "2.1.0", "express": "2.5.9", "jade": "0.26.0" }
+	"dependencies" : { "everyauth" : "https://github.com/bigokro/everyauth/raw/master/everyauth.tar.gz", "nano" : "2.1.0", "express": "2.5.9", "jade": "0.26.0", "facebook": "0.0.3" }
 }
